@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2011-3-21
+GNU C Library NEWS -- history of user-visible changes.  2011-3-30
 Copyright (C) 1992-2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -6,6 +6,8 @@ Please send GNU C library bug reports via <http://sources.redhat.com/bugzilla/>
 using `glibc' in the "product" field.
 
 Version 2.14
+
+* New Linux interfaces: clock_adjtime
 
 * The following bugs are resolved with this release:
 
